shit ton of new textures
Former-commit-id: 524136876aad39724677e45dd3bf4014676a0f2a

--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -261,15 +261,15 @@ texture n "acord/pdetail1n.jpg" 0 0 0 0.5
 texture s "acord/lowspec.jpg" 0
 texture z "acord/pdetail1z.jpg" 0 0 0 0.5
 
-texture 0 "acord/pipes1.jpg" 0 0 0 0.5
-texture n "acord/pipes1n.jpg" 0 0 0 0.5
-texture s "acord/lowspec.jpg" 0
-texture z "acord/pipes1z.jpg" 0 0 0 0.5
+texture 0 "acord/pipes1c.jpg" 0 0 0 0.25
+texture n "acord/pipes1n.jpg" 0 0 0 0.25
+texture s "acord/pipes1s.jpg" 0 0 0 0.25
+texture z "acord/pipes1z.jpg" 0 0 0 0.25
 
-texture 0 "acord/pipes1.jpg" 1 0 0 0.5
-texture n "acord/pipes1n.jpg" 1 0 0 0.5
-texture s "acord/lowspec.jpg" 1
-texture z "acord/pipes1z.jpg" 1 0 0 0.5
+texture 0 "acord/pipes1c.jpg" 1 0 0 0.25
+texture n "acord/pipes1n.jpg" 1 0 0 0.25
+texture s "acord/pipes1s.jpg" 1 0 0 0.25
+texture z "acord/pipes1z.jpg" 1 0 0 0.25
 
 texture 0 "acord/pipes2.jpg" 0 0 0 0.5
 texture n "acord/pipes2n.jpg" 0 0 0 0.5
@@ -1329,6 +1329,143 @@ texture 0 "acord/floor7.jpg" 0 0 0 0.5
 texture n "acord/floor7n.jpg" 0 0 0 0.5
 texture s "acord/floor7s.jpg" 0 0 0 0.5
 texture z "acord/floor7z.jpg" 0 0 0 0.5
+
+//added 7-21-2009
+
+texture 0 "acord/brick7c.jpg" 0 0 0 0.5
+texture n "acord/brick7n.jpg" 0 0 0 0.5
+texture s "acord/brick7s.jpg" 0 0 0 0.5
+texture z "acord/brick7z.jpg" 0 0 0 0.5
+
+texture 0 "acord/brick7c.jpg" 1 0 0 0.5
+texture n "acord/brick7n.jpg" 1 0 0 0.5
+texture s "acord/brick7s.jpg" 1 0 0 0.5
+texture z "acord/brick7z.jpg" 1 0 0 0.5
+
+texture 0 "acord/bunker4c.jpg" 0 0 0 0.5
+texture n "acord/bunker4n.jpg" 0 0 0 0.5
+texture s "acord/bunker4s.jpg" 0 0 0 0.5
+texture z "acord/bunker4z.jpg" 0 0 0 0.5
+
+texture 0 "acord/bunker4c.jpg" 1 0 0 0.5
+texture n "acord/bunker4n.jpg" 1 0 0 0.5
+texture s "acord/bunker4s.jpg" 1 0 0 0.5
+texture z "acord/bunker4z.jpg" 1 0 0 0.5
+
+texture 0 "acord/conc12c.jpg" 0 0 0 0.5
+texture n "acord/conc12n.jpg" 0 0 0 0.5
+texture s "acord/conc12s.jpg" 0 0 0 0.5
+texture z "acord/conc12z.jpg" 0 0 0 0.5
+
+texture 0 "acord/conc12c.jpg" 1 0 0 0.5
+texture n "acord/conc12n.jpg" 1 0 0 0.5
+texture s "acord/conc12s.jpg" 1 0 0 0.5
+texture z "acord/conc12z.jpg" 1 0 0 0.5
+
+texture 0 "acord/concrete5c.jpg" 0 0 0 0.5
+texture n "acord/concrete5n.jpg" 0 0 0 0.5
+texture s "acord/concrete5s.jpg" 0 0 0 0.5
+texture z "acord/concrete5z.jpg" 0 0 0 0.5
+
+texture 0 "acord/concrete5c.jpg" 1 0 0 0.5
+texture n "acord/concrete5n.jpg" 1 0 0 0.5
+texture s "acord/concrete5s.jpg" 1 0 0 0.5
+texture z "acord/concrete5z.jpg" 1 0 0 0.5
+
+texture 0 "acord/earth4c.jpg" 0 0 0 0.5
+texture n "acord/earth4n.jpg" 0 0 0 0.5
+texture s "acord/earth4s.jpg" 0 0 0 0.5
+texture z "acord/earth4z.jpg" 0 0 0 0.5
+
+texture 0 "acord/earth5c.jpg" 0 0 0 0.5
+texture n "acord/earth5n.jpg" 0 0 0 0.5
+texture s "acord/earth5s.jpg" 0 0 0 0.5
+texture z "acord/earth5z.jpg" 0 0 0 0.5
+
+texture 0 "acord/gravel1c.jpg" 0 0 0 0.5
+texture n "acord/gravel1n.jpg" 0 0 0 0.5
+texture s "acord/gravel1s.jpg" 0 0 0 0.5
+texture z "acord/gravel1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/gravel2c.jpg" 0 0 0 0.5
+texture n "acord/gravel2n.jpg" 0 0 0 0.5
+texture s "acord/gravel2s.jpg" 0 0 0 0.5
+texture z "acord/gravel2z.jpg" 0 0 0 0.5
+
+texture 0 "acord/junk1c.jpg" 0 0 0 0.5
+texture n "acord/junk1n.jpg" 0 0 0 0.5
+texture s "acord/junk1s.jpg" 0 0 0 0.5
+texture z "acord/junk1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/junk2c.jpg" 0 0 0 0.5
+texture n "acord/junk2n.jpg" 0 0 0 0.5
+texture s "acord/junk2s.jpg" 0 0 0 0.5
+texture z "acord/junk2z.jpg" 0 0 0 0.5
+
+texture 0 "acord/plaster1c.jpg" 0 0 0 0.5
+texture n "acord/plaster1n.jpg" 0 0 0 0.5
+texture s "acord/plaster1s.jpg" 0 0 0 0.5
+texture z "acord/plaster1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/plaster1c.jpg" 1 0 0 0.5
+texture n "acord/plaster1n.jpg" 1 0 0 0.5
+texture s "acord/plaster1s.jpg" 1 0 0 0.5
+texture z "acord/plaster1z.jpg" 1 0 0 0.5
+
+texture 0 "acord/plaster2c.jpg" 0 0 0 0.5
+texture n "acord/plaster2n.jpg" 0 0 0 0.5
+texture s "acord/plaster2s.jpg" 0 0 0 0.5
+texture z "acord/plaster2z.jpg" 0 0 0 0.5
+
+texture 0 "acord/plaster2c.jpg" 1 0 0 0.5
+texture n "acord/plaster2n.jpg" 1 0 0 0.5
+texture s "acord/plaster2s.jpg" 1 0 0 0.5
+texture z "acord/plaster2z.jpg" 1 0 0 0.5
+
+texture 0 "acord/rocks1c.jpg" 0 0 0 0.5
+texture n "acord/rocks1n.jpg" 0 0 0 0.5
+texture s "acord/rocks1s.jpg" 0 0 0 0.5
+texture z "acord/rocks1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/rubble1c.jpg" 0 0 0 0.5
+texture n "acord/rubble1n.jpg" 0 0 0 0.5
+texture s "acord/rubble1s.jpg" 0 0 0 0.5
+texture z "acord/rubble1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/tile5c.jpg" 0 0 0 0.5
+texture n "acord/tile5n.jpg" 0 0 0 0.5
+texture s "acord/tile5s.jpg" 0 0 0 0.5
+texture z "acord/tile5z.jpg" 0 0 0 0.5
+
+texture 0 "acord/vent1c.jpg" 0 0 0 0.5
+texture n "acord/vent1n.jpg" 0 0 0 0.5
+texture s "acord/vent1s.jpg" 0 0 0 0.5
+texture z "acord/vent1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/vent1c.jpg" 1 0 0 0.5
+texture n "acord/vent1n.jpg" 1 0 0 0.5
+texture s "acord/vent1s.jpg" 1 0 0 0.5
+texture z "acord/vent1z.jpg" 1 0 0 0.5
+
+texture 0 "acord/vents4c.jpg" 0 0 0 0.5
+texture n "acord/vents4n.jpg" 0 0 0 0.5
+texture s "acord/vents4s.jpg" 0 0 0 0.5
+texture z "acord/vents4z.jpg" 0 0 0 0.5
+
+texture 0 "acord/vents4c.jpg" 1 0 0 0.5
+texture n "acord/vents4n.jpg" 1 0 0 0.5
+texture s "acord/vents4s.jpg" 1 0 0 0.5
+texture z "acord/vents4z.jpg" 1 0 0 0.5
+
+texture 0 "acord/wires2c.jpg" 0 0 0 0.5
+texture n "acord/wires2n.jpg" 0 0 0 0.5
+texture s "acord/wires2s.jpg" 0 0 0 0.5
+texture z "acord/wires2z.jpg" 0 0 0 0.5
+
+texture 0 "acord/wires2c.jpg" 1 0 0 0.5
+texture n "acord/wires2n.jpg" 1 0 0 0.5
+texture s "acord/wires2s.jpg" 1 0 0 0.5
+texture z "acord/wires2z.jpg" 1 0 0 0.5
 
 setshader stdworld
 
