some directory and enum cleanups
Former-commit-id: f5faef89a70b0b6acdf98a9bd99e05378ea3899a

--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -15,13 +15,13 @@ registersound	"sounds/sfx/burn"				64	"air"	300		//	S_BURN
 registersound	"sounds/sfx/burning"			128	"air"	300		//	S_BURNING
 registersound	"sounds/sfx/bzap"				64	"air"	200		//	S_BZAP
 registersound	"sounds/sfx/bzzt"				112	"air"	200		//	S_BZZT
-registersound	"sounds/sfx/weaponreload"		128	"air"	200		//	S_RELOAD
-registersound	"sounds/sfx/weapontrigger"		128	"air"	200		//	S_SWITCH
+registersound	"sounds/sfx/reload"				128	"air"	200		//	S_RELOAD
+registersound	"sounds/sfx/switch"				128	"air"	200		//	S_SWITCH
 registersound	"sounds/sfx/pistol"				196	"air"	500		//	S_PISTOL
-registersound	"sounds/sfx/shotgun"			224 "air"	600		//	S_SG
-registersound	"sounds/sfx/submachine"			128	"air"	600		//	S_SMG
-registersound	"sounds/sfx/grenadefire"		196	"air"	200		//	S_GLFIRE
-registersound	"sounds/sfx/flamer"				196	"air"	500		//	S_FLFIRE
+registersound	"sounds/sfx/shotgun"			224 "air"	600		//	S_SHOTGUN
+registersound	"sounds/sfx/smg"				128	"air"	600		//	S_SMG
+registersound	"sounds/sfx/grenade"			196	"air"	200		//	S_GRENADE
+registersound	"sounds/sfx/flamer"				196	"air"	500		//	S_FLAMER
 registersound	"sounds/sfx/plasma"				112	"air"	400		//	S_PLASMA
 registersound	"sounds/sfx/rifle"				196	"air"	600		//	S_RIFLE
 registersound	"sounds/sfx/paintgun"			64	"air"	400		//	S_PAINT
