--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -17,13 +17,13 @@ registersound	"sounds/sfx/bzap"				64	"air"	200		//	S_BZAP
 registersound	"sounds/sfx/bzzt"				112	"air"	200		//	S_BZZT
 registersound	"sounds/sfx/reload"				128	"air"	200		//	S_RELOAD
 registersound	"sounds/sfx/switch"				128	"air"	200		//	S_SWITCH
-registersound	"sounds/sfx/pistol"				196	"air"	500		//	S_PISTOL
+registersound	"sounds/sfx/pistol"				128	"air"	300		//	S_PISTOL
 registersound	"sounds/sfx/shotgun"			224 "air"	600		//	S_SHOTGUN
 registersound	"sounds/sfx/smg"				128	"air"	600		//	S_SMG
 registersound	"sounds/sfx/grenade"			196	"air"	200		//	S_GRENADE
 registersound	"sounds/sfx/flamer"				196	"air"	500		//	S_FLAMER
 registersound	"sounds/sfx/plasma"				112	"air"	400		//	S_PLASMA
-registersound	"sounds/sfx/rifle"				196	"air"	600		//	S_RIFLE
+registersound	"sounds/sfx/rifle"				196	"air"	700		//	S_RIFLE
 registersound	"sounds/sfx/paintgun"			64	"air"	400		//	S_PAINT
 registersound	"sounds/sfx/itempickup"			128	"air" 	100		//	S_ITEMPICKUP
 registersound	"sounds/sfx/itemspawn"			128	"air"	100		//	S_ITEMSPAWN
@@ -38,4 +38,4 @@ registersound	"sounds/sfx/damage7"			254	"air"	200		//	S_DAMAGE7
 registersound	"sounds/sfx/damage8"			254	"air"	200		//	S_DAMAGE8
 registersound	"sounds/sfx/respawn"			112	"air"	200		//	S_RESPAWN
 registersound	"sounds/sfx/chat"				254	"air" 			//	S_CHAT
-registersound	"sounds/sfx/denied"				254	"air"			//	S_DENIED
+registersound	"sounds/sfx/error"				254	"air"			//	S_ERROR
