some fixes/tweaks
Former-commit-id: 64bb0993f18a009ac6a8b84d233db824c542d528

--- a/data/maps/eight.cfg
+++ b/data/maps/eight.cfg
@@ -10,9 +10,9 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudblend 0.75
-// cloudbox "acord/sky3"
-// cloudclip 0.51
+// cloudblend 0.9
+// cloudbox "acord/clouds"
+// cloudclip 0.0
 // cloudcolour 0x222266
 // cloudfade 0.1
 // cloudglare 0
@@ -59,12 +59,12 @@
 // maptitle "Eight by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-movespeed 50.0
+// movespeed 50.0
 // numplayers 4
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// skybgcolour 0x000000
+// skybgcolour 0x020212
 // skybgglare 1
 // skyblend 1.0
 // skybox "skyboxes/stars"
