game variable clanup; simplified some values to core elements, added - ctfstyle (0 = classic touch-and-return, 1 = grab and take home), ctfresetdelay (0 = instant, otherwise time in secs), stfpoints and stfoccupy
Former-commit-id: 2027f514b2ef0c48f55f9235e633ef7017808831

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -290,21 +290,22 @@ newgui game [
 					vardef selfdamage		"self damage"
 					vardef teamdamage		"team damage"
 					vardef maxhealth		"max health"
-					vardef overctfhealth	"over ctf health"
-					vardef overstfhealth	"over stf health"
+					vardef extrahealth		"extra health"
 					vardef maxcarry			"max carry weaps"
+					vardef regenguard		"regen guard"
 					vardef regenhealth		"regen health"
-					vardef regenctfguard	"regen ctf guard"
-					vardef regenstfguard	"regen stf guard"
-					vardef regenctfflag		"regen ctf flag"
-					vardef regenstfflag		"regen stf flag"
+					vardef regenextra		"regen extra"
 					vardef itemsallowed		"items allowed"
 					vardef itemdropping		"item dropping"
 					vardef kamikaze			"kamikaze"
 					vardef fraglimit		"frag limit"
 					vardef ctflimit			"ctf score limit"
+					vardef ctfstyle			"ctf score limit"
+					vardef ctfresetdelay	"ctf reset delay"
 					vardef stflimit			"stf score limit"
 					vardef stffinish		"stf all finish"
+					vardef stfpoints		"stf points"
+					vardef stfoccupy		"stf occupy"
 					vardef spawnweapon		"spawn weapon"
 					vardef instaspawnweapon	"insta spawn weapon"
 					vardef maprotate		"map rotation"
@@ -315,21 +316,22 @@ newgui game [
 					varfld selfdamage 12
 					varfld teamdamage 12
 					varfld maxhealth 12
-					varfld overctfhealth 12
-					varfld overstfhealth 12
+					varfld extrahealth 12
 					varfld maxcarry 12
+					varfld regenguard 12
 					varfld regenhealth 12
-					varfld regenctfguard 12
-					varfld regenstfguard 12
-					varfld regenctfflag 12
-					varfld regenstfflag 12
+					varfld regenextra 12
 					varfld itemsallowed 12
 					varfld itemdropping 12
 					varfld kamikaze 12
 					varfld fraglimit 12
 					varfld ctflimit 12
+					varfld ctfstyle 12
+					varfld ctfresetdelay 12
 					varfld stflimit 12
 					varfld stffinish 12
+					varfld stfpoints 12
+					varfld stfoccupy 12
 					guilist [
 						guilist [ varfld spawnweapon 7 ]
 						guitext (format "%1%2" $gray (at $wepnames $spawnweapon))
@@ -362,10 +364,7 @@ newgui game [
 					vardef regentime		"regen time"
 					vardef spawnprotecttime	"spawn protect"
 					vardef spawndelay		"spawn delay"
-					vardef ctfspawndelay	"ctf spawn delay"
-					vardef stfspawndelay	"stf spawn delay"
-					vardef instaspawnscale	"insta spawn scale"
-					vardef paintspawnscale	"paint spawn scale"
+					vardef instaspawndelay	"insta spawn delay"
 				]
 				guistrut 1
 				guilist [
@@ -384,10 +383,7 @@ newgui game [
 					varfld regentime 12
 					varfld spawnprotecttime 12
 					varfld spawndelay 12
-					varfld ctfspawndelay 12
-					varfld stfspawndelay 12
-					varfld instaspawnscale 12
-					varfld paintspawnscale 12
+					varfld instaspawndelay 12
 				]
 			]
 			guibutton (format "%1reset all game variables" $orange) [resetvars] "exit"
