impulse/jump separation
Former-commit-id: dbdb4791437b0f3f5302349be1769e5bd21b3399

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -98,7 +98,8 @@ bind DOWN			[ backward ]
 bind RIGHT			[ right ]
 bind LEFT			[ left ]
 
-bind LSHIFT			[ crouch ]
+bind LSHIFT			[ impulse ]
+bind LCTRL			[ crouch ]
 bind SPACE			[ jump ]
 
 bind MOUSE1			[ attack ]
