status tweaks, wavepusharea game variable to control explosive wavepush radius multiplier
Former-commit-id: e167cbe7fc4de1362cf6d9152186fbfa4c6c1b17

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -355,6 +355,7 @@ newgui game [
 					vardef speedscale		"speed scale"
 					vardef hitpushscale		"hit push scale"
 					vardef deadpushscale	"dead push scale"
+					vardef wavepusharea		"wave push area"
 					vardef wavepushscale	"wave push scale"
 					vardef timelimit		"time limit"
 					vardef intermlimit		"intermission"
@@ -374,6 +375,7 @@ newgui game [
 					varfld speedscale 12
 					varfld hitpushscale 12
 					varfld deadpushscale 12
+					varfld wavepusharea 12
 					varfld wavepushscale 12
 					varfld timelimit 12
 					varfld intermlimit 12
