more impulse-dash tweaks
Former-commit-id: 0e734d1c99f0dccaf97b8ff3a5de378c81244e23

--- a/data/maps/hollow.cfg
+++ b/data/maps/hollow.cfg
@@ -39,7 +39,7 @@
 // grassscale 2
 // gravity 65.0
 // impulsemod 60.0
-// impulsespeed 20.0
+impulsespeed 50
 // impulsetime 0
 // jumpspeed 40.0
 // ladderspeed 1.0
