--- a/data/maps/tranquility.cfg
+++ b/data/maps/tranquility.cfg
@@ -39,7 +39,7 @@
 // grassscale 2
 // gravity 40.0
 // impulsemod 60.0
-// impulsespeed 30.0
+impulsespeed 50
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
