--- a/data/maps/chaos.cfg
+++ b/data/maps/chaos.cfg
@@ -36,7 +36,7 @@
 // grassscale 2
 // gravity 43.0
 // impulsemod 60.0
-// impulsespeed 30.0
+impulsespeed 50
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
