--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -39,7 +39,7 @@
 // grassscale 2
 // gravity 50.0
 // impulsemod 60.0
-// impulsespeed 40.0
+impulsespeed 50
 // impulsetime 0
 // jumpspeed 60.0
 // ladderspeed 1.0
