--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -336,7 +336,7 @@ musicfiles = [
 playmusic = [ music (at $musicfiles (rnd (listlen $musicfiles))) ]
 
 // some aliases
-fov = [ if (= (inthirdperson) 1) [ thirdpersonfov $arg1 ] [ firstpersonfov $arg1 ] ] // people have complained /fov was removed
+fov = [ if (= (isthirdperson) 1) [ thirdpersonfov $arg1 ] [ firstpersonfov $arg1 ] ] // people have complained /fov was removed
 
 // sauer rotation aliases
 alias octamaps [
