regen penalties and rewards [server protocol changed]
Former-commit-id: 8ad354924fd355f27d3db17009b4896e52269729

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -295,6 +295,9 @@ newgui game [
 					vardef regenguard		"regen guard"
 					vardef regenhealth		"regen health"
 					vardef regenextra		"regen extra"
+					vardef regenpenalty		"regen penalty"
+					vardef impulselength	"impulse length"
+					vardef impulsejump		"impulse jump"
 					vardef itemsallowed		"items allowed"
 					vardef itemdropping		"item dropping"
 					vardef kamikaze			"kamikaze"
@@ -321,6 +324,9 @@ newgui game [
 					varfld regenguard 12
 					varfld regenhealth 12
 					varfld regenextra 12
+					varfld regenpenalty 12
+					varfld impulselength 12
+					varfld impulsejump 12
 					varfld itemsallowed 12
 					varfld itemdropping 12
 					varfld kamikaze 12
