frag styles, spree achievements, revenge/domination semantic
Former-commit-id: 90ebfc58b9354e8faaafd436d736e1647369155e

--- a/data/sounds/announcer/alpha/package.cfg
+++ b/data/sounds/announcer/alpha/package.cfg
@@ -13,6 +13,9 @@ registersound	"sounds/announcer/alpha/carnage"			224	"air"			//	S_V_SPREE1
 registersound	"sounds/announcer/alpha/slaughter"			224	"air"			//	S_V_SPREE2
 registersound	"sounds/announcer/alpha/massacre"			224	"air"			//	S_V_SPREE3
 registersound	"sounds/announcer/alpha/bloodbath"			224	"air"			//	S_V_SPREE4
+registersound	"sounds/announcer/alpha/owned"				224	"air"			//	S_V_SPREE5
+registersound	"sounds/announcer/alpha/owned"				224	"air"			//	S_V_REVENGE
+registersound	"sounds/announcer/alpha/owned"				224	"air"			//	S_V_DOMINATE
 registersound	"sounds/announcer/alpha/youwin"				224	"air"			//	S_V_YOUWIN
 registersound	"sounds/announcer/alpha/youlose"			224	"air"			//	S_V_YOULOSE
 registersound	"sounds/announcer/alpha/missioncomplete"	224	"air"			//	S_V_MCOMPLETE
