--- a/data/sounds/announcer/beta/package.cfg
+++ b/data/sounds/announcer/beta/package.cfg
@@ -13,6 +13,9 @@ registersound	"sounds/announcer/beta/carnage"				224	"air"			//	S_V_SPREE1
 registersound	"sounds/announcer/beta/slaughter"			224	"air"			//	S_V_SPREE2
 registersound	"sounds/announcer/beta/massacre"			224	"air"			//	S_V_SPREE3
 registersound	"sounds/announcer/beta/bloodbath"			224	"air"			//	S_V_SPREE4
+registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_SPREE5
+registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_REVENGE
+registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_DOMINATE
 registersound	"sounds/announcer/beta/youwin"				224	"air"			//	S_V_YOUWIN
 registersound	"sounds/announcer/beta/youlose"				224	"air"			//	S_V_YOULOSE
 registersound	"sounds/announcer/beta/missioncomplete"		224	"air"			//	S_V_MCOMPLETE
