--- a/data/sounds/announcer/beta/package.cfg
+++ b/data/sounds/announcer/beta/package.cfg
@@ -14,8 +14,8 @@ registersound	"sounds/announcer/beta/slaughter"			224	"air"			//	S_V_SPREE2
 registersound	"sounds/announcer/beta/massacre"			224	"air"			//	S_V_SPREE3
 registersound	"sounds/announcer/beta/bloodbath"			224	"air"			//	S_V_SPREE4
 registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_SPREE5
-registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_REVENGE
-registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_DOMINATE
+registersound	"sounds/revenge"							224	"air"			//	S_V_REVENGE
+registersound	"sounds/dominating"							224	"air"			//	S_V_DOMINATE
 registersound	"sounds/announcer/beta/youwin"				224	"air"			//	S_V_YOUWIN
 registersound	"sounds/announcer/beta/youlose"				224	"air"			//	S_V_YOULOSE
 registersound	"sounds/announcer/beta/missioncomplete"		224	"air"			//	S_V_MCOMPLETE
