added multi kill rewards, limited announcer channel, added game variables; multikilldelay, spreecount, dominatecount
Former-commit-id: 88801980a09d9bdc35206866c3e8ec2175ef64b5

--- a/data/sounds/announcer/beta/package.cfg
+++ b/data/sounds/announcer/beta/package.cfg
@@ -14,6 +14,9 @@ registersound	"sounds/announcer/beta/slaughter"			224	"air"			//	S_V_SPREE2
 registersound	"sounds/announcer/beta/massacre"			224	"air"			//	S_V_SPREE3
 registersound	"sounds/announcer/beta/bloodbath"			224	"air"			//	S_V_SPREE4
 registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_SPREE5
+registersound	"sounds/sfx/damage8"						224	"air"			//	S_V_MKILL1
+registersound	"sounds/sfx/damage8"						224	"air"			//	S_V_MKILL2
+registersound	"sounds/sfx/damage8"						224	"air"			//	S_V_MKILL3
 registersound	"sounds/revenge"							224	"air"			//	S_V_REVENGE
 registersound	"sounds/dominating"							224	"air"			//	S_V_DOMINATE
 registersound	"sounds/announcer/beta/youwin"				224	"air"			//	S_V_YOUWIN
