--- a/data/sounds/announcer/alpha/package.cfg
+++ b/data/sounds/announcer/alpha/package.cfg
@@ -14,6 +14,9 @@ registersound	"sounds/announcer/alpha/slaughter"			224	"air"			//	S_V_SPREE2
 registersound	"sounds/announcer/alpha/massacre"			224	"air"			//	S_V_SPREE3
 registersound	"sounds/announcer/alpha/bloodbath"			224	"air"			//	S_V_SPREE4
 registersound	"sounds/announcer/alpha/owned"				224	"air"			//	S_V_SPREE5
+registersound	"sounds/sfx/damage8"						224	"air"			//	S_V_MKILL1
+registersound	"sounds/sfx/damage8"						224	"air"			//	S_V_MKILL2
+registersound	"sounds/sfx/damage8"						224	"air"			//	S_V_MKILL3
 registersound	"sounds/revenge"							224	"air"			//	S_V_REVENGE
 registersound	"sounds/dominating"							224	"air"			//	S_V_DOMINATE
 registersound	"sounds/announcer/alpha/youwin"				224	"air"			//	S_V_YOUWIN
