--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -38,9 +38,7 @@
 // grassheight 4
 // grassscale 2
 // gravity 50.0
-// impulsemod 60.0
-impulsespeed 50
-// impulsetime 0
+// impulsespeed 50.0
 // jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
