team damage alarm, support for; blinking (^fz<a><b>), blank(^fE), dim text (^fe)
Former-commit-id: 8b46ef3ef67536e6c1bc5541c1581dddd8888b07

--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -39,3 +39,4 @@ registersound	"sounds/sfx/damage8"			254	"air"	200		//	S_DAMAGE8
 registersound	"sounds/sfx/respawn"			112	"air"	200		//	S_RESPAWN
 registersound	"sounds/sfx/chat"				254	"air" 			//	S_CHAT
 registersound	"sounds/sfx/error"				254	"air"			//	S_ERROR
+registersound	"sounds/sfx/alarm"				254	"air"			//	S_ALARM
