hud tweaks, sfx locations fixed
Former-commit-id: d6daa5ac9692c593a906d1692e2c95048ce07f4b

--- a/data/sounds/announcer/alpha/package.cfg
+++ b/data/sounds/announcer/alpha/package.cfg
@@ -17,8 +17,8 @@ registersound	"sounds/announcer/alpha/massacre"			224	"air"			//	S_V_SPREE5
 registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL1
 registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL2
 registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL3
-registersound	"sounds/revenge"							224	"air"			//	S_V_REVENGE
-registersound	"sounds/dominating"							224	"air"			//	S_V_DOMINATE
+registersound	"sounds/sfx/revenge"						224	"air"			//	S_V_REVENGE
+registersound	"sounds/sfx/dominating"						224	"air"			//	S_V_DOMINATE
 registersound	"sounds/announcer/alpha/youwin"				224	"air"			//	S_V_YOUWIN
 registersound	"sounds/announcer/alpha/youlose"			224	"air"			//	S_V_YOULOSE
 registersound	"sounds/announcer/alpha/missioncomplete"	224	"air"			//	S_V_MCOMPLETE
