--- a/data/sounds/announcer/beta/package.cfg
+++ b/data/sounds/announcer/beta/package.cfg
@@ -17,8 +17,8 @@ registersound	"sounds/announcer/beta/massacre"			224	"air"			//	S_V_SPREE5
 registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL1
 registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL2
 registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL3
-registersound	"sounds/revenge"							224	"air"			//	S_V_REVENGE
-registersound	"sounds/dominating"							224	"air"			//	S_V_DOMINATE
+registersound	"sounds/sfx/revenge"						224	"air"			//	S_V_REVENGE
+registersound	"sounds/sfx/dominating"						224	"air"			//	S_V_DOMINATE
 registersound	"sounds/announcer/beta/youwin"				224	"air"			//	S_V_YOUWIN
 registersound	"sounds/announcer/beta/youlose"				224	"air"			//	S_V_YOULOSE
 registersound	"sounds/announcer/beta/missioncomplete"		224	"air"			//	S_V_MCOMPLETE
