--- a/data/sounds/announcer/beta/package.cfg
+++ b/data/sounds/announcer/beta/package.cfg
@@ -13,7 +13,8 @@ registersound	"sounds/announcer/beta/carnage"				224	"air"			//	S_V_SPREE1
 registersound	"sounds/announcer/beta/slaughter"			224	"air"			//	S_V_SPREE2
 registersound	"sounds/announcer/beta/massacre"			224	"air"			//	S_V_SPREE3
 registersound	"sounds/announcer/beta/bloodbath"			224	"air"			//	S_V_SPREE4
-registersound	"sounds/announcer/beta/massacre"			224	"air"			//	S_V_SPREE5
+registersound	"sounds/sfx/multi"							224	"air"			//	S_V_SPREE5
+registersound	"sounds/sfx/multi"							224	"air"			//	S_V_SPREE6
 registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL1
 registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL2
 registersound	"sounds/sfx/multi"							224	"air"			//	S_V_MKILL3
