added the ability to perform complex collisions for projectiles to determine hitzone area based on several hitboxes inferred from bone positions
Former-commit-id: ced036bde0fb023b945f6c248287a9ef893a1859

--- a/data/models/actors/player/md5.cfg
+++ b/data/models/actors/player/md5.cfg
@@ -3,7 +3,11 @@ md5load trooper.md5mesh player
 exec "data/models/actors/player/ragdoll.cfg"
 
 md5tag Weapon tag_weapon
-md5tag waist tag_affinity
+md5tag waist tag_waist
+md5tag L_Foot tag_lfoot
+md5tag R_Foot tag_rfoot
+md5tag Abdomen tag_torso
+md5tag Head tag_head
 
 md5skin mesh "<dds>skin.png" "<dds>mask.png"
 md5bumpmap mesh "<dds>normals.png"
