texturing/waypoint/config fixes
Former-commit-id: b56b6deac4702ca696035698601859f659ffa4a9

--- a/data/maps/eight.cfg
+++ b/data/maps/eight.cfg
@@ -59,7 +59,7 @@ impulsespeed 50
 // maptitle "Eight by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-// movespeed 50.0
+movespeed 50.0
 // numplayers 4
 // refractfog 1
 // shadowmapambient 0x000000
