--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -38,7 +38,7 @@
 // grassheight 4
 // grassscale 2
 // gravity 50.0
-// impulsespeed 50.0
+impulsespeed 50.0
 // jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
@@ -57,7 +57,7 @@
 // maptitle "Tower by Quinton Reeves"
 // mmshadows 1
 // mmskylight 1
-// movespeed 50.0
+movespeed 50.0
 // numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
