--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -38,7 +38,7 @@
 // grassheight 4
 // grassscale 2
 // gravity 50.0
-// impulsespeed 50.0
+impulsespeed 50.0
 // jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
@@ -57,7 +57,7 @@
 // maptitle "Refuge by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-// movespeed 50.0
+movespeed 50.0
 // numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
