--- a/data/maps/tranquility.cfg
+++ b/data/maps/tranquility.cfg
@@ -59,7 +59,7 @@ impulsespeed 50
 // maptitle "Tranquility by Derek 'Favorito' Ponicki"
 // mmshadows 2
 // mmskylight 1
-// movespeed 50.0
+movespeed 50.0
 // numplayers 16
 // refractfog 1
 // shadowmapambient 0x000000
