--- a/data/maps/wet.cfg
+++ b/data/maps/wet.cfg
@@ -59,7 +59,7 @@ impulsespeed 50
 // maptitle "Wet by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
-// movespeed 50.0
+movespeed 50.0
 // numplayers 2
 // refractfog 1
 // shadowmapambient 0x000000
