updated overseer triggers to not run on ai interaction
Former-commit-id: 40432c06a8eb7a560ab4b426c9e4bc1190a9eae8

--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -89,7 +89,7 @@ numplayers 4
 
 "on_start" = [ if (= (gamemode) 1) [ sleep $titlefade [ overseer_intro ] ] ]
 "on_trigger_1" = [
-	if (= (gamemode) 1) [
+	if (&& (!= (isai (triggerclientnum)) 1) (= (gamemode) 1)) [
 		if (|| (= $overseer_trigger_1 0) (>= (- (getmillis) $overseer_trigger_1) 5000)) [
 			overseer_trigger_1 = (getmillis)
 			if (= (guicount) 0) [ showgui main ]
@@ -97,7 +97,7 @@ numplayers 4
 	]
 ]
 "on_trigger_2" = [
-	if (= (gamemode) 1) [
+	if (&& (!= (isai (triggerclientnum)) 1) (= (gamemode) 1)) [
 		if (|| (= $overseer_trigger_2 0) (>= (- (getmillis) $overseer_trigger_2) 10000)) [
 			overseer_trigger_2 = (getmillis)
 			connect $servermaster
@@ -105,7 +105,7 @@ numplayers 4
 	]
 ]
 "on_trigger_3" = [
-	if (= (gamemode) 1) [
+	if (&& (!= (isai (triggerclientnum)) 1) (= (gamemode) 1)) [
 		if (= $overseer_trigger_3 0) [
 			overseer_trigger_3 = (getmillis)
 			deathmatch eight
@@ -113,7 +113,7 @@ numplayers 4
 	]
 ]
 "on_trigger_4" = [
-	if (= (gamemode) 1) [
+	if (&& (!= (isai (triggerclientnum)) 1) (= (gamemode) 1)) [
 		if (= $overseer_trigger_4 0) [
 			overseer_trigger_4 = (getmillis)
 			overseer_construct
@@ -121,7 +121,7 @@ numplayers 4
 	]
 ]
 "on_trigger_5" = [
-	if (= (gamemode) 1) [
+	if (&& (!= (isai (triggerclientnum)) 1) (= (gamemode) 1)) [
 		if (= $overseer_trigger_5 0) [
 			overseer_trigger_5 = (getmillis)
 			overseer_construct
@@ -129,7 +129,7 @@ numplayers 4
 	]
 ]
 "on_trigger_6" = [
-	if (= (gamemode) 1) [
+	if (&& (!= (isai (triggerclientnum)) 1) (= (gamemode) 1)) [
 		if (= $overseer_trigger_6 0) [
 			overseer_trigger_6 = (getmillis)
 			overseer_construct
