latest wishbone WiP
Former-commit-id: 95261fcabac9009d0e232ac47c44729eaf09e245

--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1467,6 +1467,11 @@ texture n "acord/wires2n.jpg" 1 0 0 0.5
 texture s "acord/wires2s.jpg" 1 0 0 0.5
 texture z "acord/wires2z.jpg" 1 0 0 0.5
 
+texture 0 "acord/nfloor2c.jpg" 0 0 0 1
+texture n "acord/nfloor2n.jpg" 0 0 0 1
+texture s "acord/nfloor2s.jpg" 0 0 0 1
+texture z "acord/nfloor2z.jpg" 0 0 0 1
+
 setshader stdworld
 
 texture 0 "acord/brick1.jpg"
