--- a/data/models/actors/mturret/md5.cfg
+++ b/data/models/actors/mturret/md5.cfg
@@ -1,19 +1,56 @@
 md5load "mt.md5mesh"
-md5skin MT "<compress:2>mt.png" "<compress:1>mt_mask.png"
-md5bumpmap MT "<compress:1>mgturret_normals.png"
-md5anim idle "idle_active.md5anim" 0 -1
-md5anim "forward|backward|left|right|jump|swim" "forward.md5anim" 0 1
-md5anim "punch|shoot" "firing.md5anim" 0 -1
-md5anim dying "dying.md5anim"
-md5anim dead "dead.md5anim"
-md5animpart Joint 
-md5pitch Joint 0.75 0 -45 40
-md5anim idle "idle_active.md5anim" 0 -1
-md5anim "forward|backward|left|right|jump|swim" "forward.md5anim" 0 -1
-md5anim "punch|shoot" "firing.md5anim"
-md5anim dying "dying.md5anim"
-md5anim dead "dead.md5anim"
-mdlspec 20
+md5tag tag_weapon.R tag_muzzle
+md5tag tag_weapon.L tag_muzzle2
 
-//muzzle tags are tag_weapon.L and tag_weapon.R, respectively.
-// no anim speeds were tested yet.
+md5skin MT "mt.png" "mt_mask.png"
+md5bumpmap MT "mgturret_normals.png"
+
+md5anim "idle" "idle_active.md5anim" 1
+md5anim "dying" "dying.md5anim" 8
+md5anim "dead" "dead.md5anim" 8
+md5anim "idle" "idle_active.md5anim" 1
+md5anim "plasma" "idle_active.md5anim" 1
+md5anim "shotgun" "idle_active.md5anim" 1
+md5anim "smg" "idle_active.md5anim" 1
+md5anim "flamer" "idle_active.md5anim" 1
+md5anim "pistol" "idle_active.md5anim" 1
+md5anim "rifle" "idle_active.md5anim" 1
+md5anim "paintgun" "idle_active.md5anim" 1
+md5anim "grenade" "idle_active.md5anim" 1
+md5anim "forward" "forward.md5anim" 8
+md5anim "backward" "forward.md5anim" 8
+md5anim "left" "forward.md5anim" 8
+md5anim "right" "forward.md5anim" 8
+md5anim "jump" "forward.md5anim" 8
+md5anim "impulse" "forward.md5anim" 8
+md5anim "sink" "forward.md5anim" 8
+md5anim "swim" "forward.md5anim" 8
+md5anim "crouch" "idle_active.md5anim" 2
+md5anim "crawl forward" "idle_active.md5anim" 8
+md5anim "crawl backward" "idle_active.md5anim" 8
+md5anim "crawl right" "idle_active.md5anim" 8
+md5anim "crawl left" "idle_active.md5anim" 8
+md5anim "switch" "firing.md5anim" 8
+md5anim "plasma shoot" "firing.md5anim" 25
+md5anim "plasma reload" "firing.md5anim" 9
+md5anim "shotgun shoot" "firing.md5anim" 25
+md5anim "shotgun reload" "firing.md5anim" 9
+md5anim "smg shoot" "firing.md5anim" 25
+md5anim "smg reload" "firing.md5anim" 6
+md5anim "flamer shoot" "firing.md5anim" 25
+md5anim "flamer reload" "firing.md5anim" 4
+md5anim "pistol shoot" "firing.md5anim" 25
+md5anim "pistol reload" "firing.md5anim" 8
+md5anim "rifle shoot" "firing.md5anim" 25
+md5anim "rifle reload" "firing.md5anim" 9
+md5anim "paintgun shoot" "firing.md5anim" 25
+md5anim "paintgun reload" "firing.md5anim" 9
+md5anim "grenade throw" "firing.md5anim" 35
+md5anim "grenade reload" "firing.md5anim" 1.5
+md5anim "grenade power" "firing.md5anim" 10
+
+mdlyaw -90
+mdlcollide 1
+mdlambient 30
+mdlscale 1000
+mdlspec 20
