game mode cleanup; eradicated paintball, moved vampire from mutator to variable
Former-commit-id: 2f29b8cc7a1ab8b2389e60228a0add22c7db6015

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -204,9 +204,7 @@ newgui game [
 						guibitfield "instagib"					mutsselected 0x0004
 						guibitfield "duel"						mutsselected 0x0008
 						guibitfield "last-man"					mutsselected 0x0010
-						guibitfield "paintball"					mutsselected 0x0020
-						guibitfield "vampire"					mutsselected 0x0040
-						guibitfield "arena"						mutsselected 0x0080
+						guibitfield "arena"						mutsselected 0x0020
 
 						mutsselected = (mutscheck $modeselected $mutsselected)
 					]
@@ -291,6 +289,7 @@ newgui game [
 					vardef maxhealth		"max health"
 					vardef extrahealth		"extra health"
 					vardef maxcarry			"max carry weaps"
+					vardef vampire			"vampire"
 					vardef regenguard		"regen guard"
 					vardef regenhealth		"regen health"
 					vardef regenextra		"regen extra"
@@ -316,6 +315,7 @@ newgui game [
 					varfld maxhealth 12
 					varfld extrahealth 12
 					varfld maxcarry 12
+					varfld vampire 12
 					varfld regenguard 12
 					varfld regenhealth 12
 					varfld regenextra 12
