contextual game menu
Former-commit-id: 7971084cafda42327c043846a24a1302d5328533

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -137,7 +137,7 @@ newgui arena [
 ]
 
 maplists = [ missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
-maplistsize = 21 //adjust if desired
+maplistsize = 22 //adjust if desired
 mapindex = 0
 maplist = ""
 mapfile = ""
@@ -194,25 +194,26 @@ newgui game [
 						guititle "gamemode"
 						guiradio "lobby"						modeselected 1
 						guiradio "editing"						modeselected 2
+						guiradio "mission"						modeselected 3
 						guiradio "deathmatch"					modeselected 4
 						guiradio "secure-the-flag"				modeselected 5
 						guiradio "capture-the-flag"				modeselected 6
-						guistrut 1
-						guititle "mutators"
-						guibitfield "multi-sided"				mutsselected 0x0001
-						guibitfield "teamplay"					mutsselected 0x0002
-						guibitfield "instagib"					mutsselected 0x0004
-						guibitfield "duel"						mutsselected 0x0008
-						guibitfield "last-man"					mutsselected 0x0010
-						guibitfield "arena"						mutsselected 0x0020
-
+						if (>= $modeselected 4) [
+							guistrut 1
+							guititle "mutators"
+							guibitfield "multi-sided"				mutsselected 0x0001
+							guibitfield "teamplay"					mutsselected 0x0002
+							guibitfield "instagib"					mutsselected 0x0004
+							guibitfield "arena"						mutsselected 0x0020
+							if (= $modeselected 4) [
+								guibitfield "duel"						mutsselected 0x0008
+								guibitfield "last-man"					mutsselected 0x0010
+							] [ guistrut 2 ]
+						] [ guistrut 8 ]
 						mutsselected = (mutscheck $modeselected $mutsselected)
 					]
 					guistrut 1
-					guilist [
-						guistrut 1
-						guiimage $mapimg [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur) ] 6 1 "textures/nothumb"
-					]
+					guilist [ guiimage $mapimg [echo (format "start %1 on %2" (gamename $modeselected $mutsselected) $mapcur) ] 8 1 "textures/nothumb" ]
 				]
 				guistrut 1
 				guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
@@ -239,7 +240,12 @@ newgui game [
 			]
 			guistrut 1
 			guilist [
-				guititle "maps"
+				guilist [ 
+					guistrut 6
+					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) "conopen" 
+					guistrut 2
+					guibutton (format "%1close" $red) [cleargui 1] "exit" 
+				] 
 				guilist [
 					nummaps = (listlen $maplist)
 					mapindex = (min (max 0 (- $nummaps $maplistsize)) $mapindex) //safeguard
@@ -261,21 +267,6 @@ newgui game [
 					]
 					if (< $maplistsize $nummaps) [ guislider mapindex 0 (- $nummaps $maplistsize) [] 1 ]
 				]
-				guistrut 1
-				guilist [ 
-					guibutton (format "%1vote" $green) (format "start %1 %2 %3" $mapcur $modeselected $mutsselected) "action" 
-					guistrut 1
-					guibutton (format "%1close" $red) [cleargui 1] "exit" 
-					if (> $hasoctapaks 0) [
-						guistrut 2
-						guilist [
-							guibutton (format "%1sauer maps" $violet) [
-								if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
-								showngamegui = 0
-							] (? (> $mapocta 0) "checkboxon" "checkbox")
-						]
-					]
-				] 
 			]
 		]
 	]
@@ -394,6 +385,14 @@ newgui game [
 				]
 			]
 			guibutton (format "%1reset all game variables" $orange) [resetvars] "exit"
+			if (> $hasoctapaks 0) [
+				guilist [
+					guibutton (format "%1show maps from sauerbraten" $violet) [
+						if (> $mapocta 0) [mapocta = 0] [mapocta = 1]
+						showngamegui = 0
+					] (? (> $mapocta 0) "checkboxon" "checkbox")
+				]
+			]
 		]
 	] ]
 ] [
