--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -94,8 +94,8 @@ texture 1 "textures/waterfalln.jpg"
 texture 1 "textures/waterfalldudv.jpg"
 texture 1 "textures/water.jpg"
 
-texture lava "textures/lava.jpg" 0 0 0 2.000000
-texture 1 "textures/lava.jpg"
+texture lava "textures/lava.png" 0 0 0 2.000000
+texture 1 "textures/lava.png"
 
 setshader stdworld
 texture c "acord/water.jpg" 0 0 0 1.000000 // 0
