--- a/data/maps/storage.cfg
+++ b/data/maps/storage.cfg
@@ -15,8 +15,8 @@ texture 1 "textures/waterdudv.jpg"
 texture 1 "textures/waterfalln.jpg"
 texture 1 "textures/waterfalldudv.jpg"
 
-texture lava "textures/lava.jpg" 0 0 0 8.000000
-texture 1 "textures/lava.jpg"
+texture lava "textures/lava.png" 0 0 0 8.000000
+texture 1 "textures/lava.png"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/null.jpg" 0 0 0 0.500000 // 0
