--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -21,7 +21,7 @@
 // cloudlayerblend 1.0
 // cloudlayercolour 0xFFCC99
 // cloudlayerglare 0
-// cloudscale 0.1
+// cloudscale 0.5
 // cloudscrollx 0.001
 // cloudscrolly 0.001
 // cloudsubdiv 64
@@ -38,7 +38,7 @@
 // grassheight 4
 // grassscale 2
 // gravity 50.0
-impulsespeed 50.0
+// impulsespeed 50.0
 // jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
@@ -57,7 +57,7 @@ impulsespeed 50.0
 // maptitle "Tower by Quinton Reeves"
 // mmshadows 1
 // mmskylight 1
-movespeed 50.0
+// movespeed 50.0
 // numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
@@ -100,8 +100,8 @@ texture 1 "textures/waterdudv.jpg"
 texture 1 "textures/waterfalln.jpg"
 texture 1 "textures/waterfalldudv.jpg"
 
-texture lava "textures/lava.jpg" 0 0 0 8.000000
-texture 1 "textures/lava.jpg"
+texture lava "textures/lava.png" 0 0 0 32.000000
+texture 1 "textures/lava.png"
 
 setshader stdworld
 texture c "acord/water.jpg" 0 0 0 1.000000 // 0
