textures and stuff
Former-commit-id: 5588abf3233371349d825f5eaea857b17a537c10

--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1467,10 +1467,50 @@ texture n "acord/wires2n.jpg" 1 0 0 0.5
 texture s "acord/wires2s.jpg" 1 0 0 0.5
 texture z "acord/wires2z.jpg" 1 0 0 0.5
 
-texture 0 "acord/nfloor2c.jpg" 0 0 0 1
-texture n "acord/nfloor2n.jpg" 0 0 0 1
-texture s "acord/nfloor2s.jpg" 0 0 0 1
-texture z "acord/nfloor2z.jpg" 0 0 0 1
+texture 0 "acord/nfloor2c.jpg" 0 0 0 0.5
+texture n "acord/nfloor2n.jpg" 0 0 0 0.5
+texture s "acord/nfloor2s.jpg" 0 0 0 0.5
+texture z "acord/nfloor2z.jpg" 0 0 0 0.5
+
+texture 0 "acord/ceilingtile1c.jpg" 0 0 0 0.5
+texture n "acord/ceilingtile1n.jpg" 0 0 0 0.5
+texture s "acord/ceilingtile1s.jpg" 0 0 0 0.5
+texture z "acord/ceilingtile1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/ceilingtile1c.jpg" 1 0 0 0.5
+texture n "acord/ceilingtile1n.jpg" 1 0 0 0.5
+texture s "acord/ceilingtile1s.jpg" 1 0 0 0.5
+texture z "acord/ceilingtile1z.jpg" 1 0 0 0.5
+
+texture 0 "acord/ceilingtile2c.jpg" 0 0 0 0.5
+texture n "acord/ceilingtile2n.jpg" 0 0 0 0.5
+texture s "acord/ceilingtile2s.jpg" 0 0 0 0.5
+texture z "acord/ceilingtile2z.jpg" 0 0 0 0.5
+
+texture 0 "acord/ceilingtile2c.jpg" 1 0 0 0.5
+texture n "acord/ceilingtile2n.jpg" 1 0 0 0.5
+texture s "acord/ceilingtile2s.jpg" 1 0 0 0.5
+texture z "acord/ceilingtile2z.jpg" 1 0 0 0.5
+
+texture 0 "acord/cubewall1c.jpg" 0 0 0 0.5
+texture n "acord/cubewall1n.jpg" 0 0 0 0.5
+texture s "acord/cubewall1s.jpg" 0 0 0 0.5
+texture z "acord/cubewall1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/paint_beige1c.jpg" 0 0 0 0.5
+texture n "acord/paint_beige1n.jpg" 0 0 0 0.5
+texture s "acord/paint_beige1s.jpg" 0 0 0 0.5
+texture z "acord/paint_beige1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/tile7c.jpg" 0 0 0 0.5
+texture n "acord/tile7n.jpg" 0 0 0 0.5
+texture s "acord/tile7s.jpg" 0 0 0 0.5
+texture z "acord/tile7z.jpg" 0 0 0 0.5
+
+texture 0 "acord/plastic1c.jpg" 0 0 0 0.5
+texture n "acord/plastic1n.jpg" 0 0 0 0.5
+texture s "acord/plastic1s.jpg" 0 0 0 0.5
+texture z "acord/plastic1z.jpg" 0 0 0 0.5
 
 setshader stdworld
 
