updated files for lava png -> jpg
Former-commit-id: b7ccd3fbbd426d27aa823b7f337ec15b9383a052

--- a/data/maps/deadsimple.cfg
+++ b/data/maps/deadsimple.cfg
@@ -92,8 +92,8 @@ texture 1 "textures/waterdudv.jpg"
 texture 1 "textures/waterfalln.jpg"
 texture 1 "textures/waterfalldudv.jpg"
 
-texture lava "textures/lava.png" 0 0 0 8.000000
-texture 1 "textures/lava.png"
+texture lava "textures/lava.jpg" 0 0 0 8.000000
+texture 1 "textures/lava.jpg"
 
 setshader stdworld
 texture c "acord/clouds.jpg" 0 0 0 1.000000 // 0
