--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -21,7 +21,7 @@
 // cloudlayerblend 1.0
 // cloudlayercolour 0xFFCC99
 // cloudlayerglare 0
-// cloudscale 0.5
+cloudscale 0.25
 // cloudscrollx 0.001
 // cloudscrolly 0.001
 // cloudsubdiv 64
@@ -100,8 +100,8 @@ texture 1 "textures/waterdudv.jpg"
 texture 1 "textures/waterfalln.jpg"
 texture 1 "textures/waterfalldudv.jpg"
 
-texture lava "textures/lava.png" 0 0 0 32.000000
-texture 1 "textures/lava.png"
+texture lava "textures/lava.jpg" 0 0 0 8.000000
+texture 1 "textures/lava.jpg"
 
 setshader stdworld
 texture c "acord/water.jpg" 0 0 0 1.000000 // 0
