--- a/data/maps/longestyard.cfg
+++ b/data/maps/longestyard.cfg
@@ -95,8 +95,8 @@ texture 1 "textures/waterdudv.jpg"
 texture 1 "textures/waterfalln.jpg"
 texture 1 "textures/waterfalldudv.jpg"
 
-texture lava "textures/lava.png" 0 0 0 8.000000
-texture 1 "textures/lava.png"
+texture lava "textures/lava.jpg" 0 0 0 8.000000
+texture 1 "textures/lava.jpg"
 
 setshader bumpspecmapparallaxworld
 setshaderparam "specscale" 1.500000 1.500000 1.500000 0.000000
