--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -159,8 +159,8 @@ texture 1 "textures/waterdudv.jpg"
 texture 1 "textures/waterfalln.jpg"
 texture 1 "textures/waterfalldudv.jpg"
 
-texture lava "textures/lava.png" 0 0 0 8.000000
-texture 1 "textures/lava.png"
+texture lava "textures/lava.jpg" 0 0 0 8.000000
+texture 1 "textures/lava.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "<mad:0.75/0.25/0.125>acord/nfloor1.jpg" 0 0 0 0.500000 // 0
