--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1492,10 +1492,10 @@ texture n "acord/ceilingtile2n.jpg" 1 0 0 0.5
 texture s "acord/ceilingtile2s.jpg" 1 0 0 0.5
 texture z "acord/ceilingtile2z.jpg" 1 0 0 0.5
 
-texture 0 "acord/cubewall1c.jpg" 0 0 0 0.5
-texture n "acord/cubewall1n.jpg" 0 0 0 0.5
-texture s "acord/cubewall1s.jpg" 0 0 0 0.5
-texture z "acord/cubewall1z.jpg" 0 0 0 0.5
+texture 0 "acord/cubewall1c.jpg" 0 0 0 0.25
+texture n "acord/cubewall1n.jpg" 0 0 0 0.25
+texture s "acord/cubewall1s.jpg" 0 0 0 0.25
+texture z "acord/cubewall1z.jpg" 0 0 0 0.25
 
 texture 0 "acord/paint_beige1c.jpg" 0 0 0 0.5
 texture n "acord/paint_beige1n.jpg" 0 0 0 0.5
@@ -1511,6 +1511,23 @@ texture 0 "acord/plastic1c.jpg" 0 0 0 0.5
 texture n "acord/plastic1n.jpg" 0 0 0 0.5
 texture s "acord/plastic1s.jpg" 0 0 0 0.5
 texture z "acord/plastic1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/carpet1c.jpg" 0 0 0 0.25
+texture n "acord/carpet1n.jpg" 0 0 0 0.25
+texture s "acord/carpet1s.jpg" 0 0 0 0.25
+texture z "acord/carpet1z.jpg" 0 0 0 0.25
+
+texture 0 "acord/carpet2c.jpg" 0 0 0 0.25
+texture n "acord/carpet2n.jpg" 0 0 0 0.25
+texture s "acord/carpet2s.jpg" 0 0 0 0.25
+texture z "acord/carpet2z.jpg" 0 0 0 0.25
+
+texture 0 "acord/carpet3c.jpg" 0 0 0 0.25
+texture n "acord/carpet3n.jpg" 0 0 0 0.25
+texture s "acord/carpet3s.jpg" 0 0 0 0.25
+texture z "acord/carpet3z.jpg" 0 0 0 0.25
+
+
 
 setshader stdworld
 
