some geometry/sky/cloud fixes and a slight retooling
Former-commit-id: 19a1a12c3e94bfac1b0ae3878aa9ff6acf79f448

--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -10,20 +10,20 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudblend 0.2
+// cloudblend 0.25
 // cloudbox "skyboxes/gradient"
 // cloudclip 0.0
 // cloudcolour 0xFF1100
-// cloudfade 0.2
+// cloudfade 0.25
 // cloudglare 0
 // cloudheight -0.1
 // cloudlayer "textures/lava"
 // cloudlayerblend 1.0
-// cloudlayercolour 0xFFCC99
+// cloudlayercolour 0xFFDDAA
 // cloudlayerglare 0
-cloudscale 0.25
-// cloudscrollx 0.001
-// cloudscrolly 0.001
+// cloudscale 0.1
+// cloudscrollx 0.0
+// cloudscrolly 0.0
 // cloudsubdiv 64
 // crawlspeed 20.0
 // edgetolerance 4
@@ -49,7 +49,7 @@ cloudscale 0.25
 // lightcompress 3
 // lighterror 8
 // lightlod 0
-// lightprecision 212
+// lightprecision 206
 // liquidcurb 10.0
 // liquidspeed 0.85
 // lmshadows 1
@@ -62,16 +62,16 @@ cloudscale 0.25
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
-// skybgcolour 0x040000
+// skybgcolour 0x080004
 // skybgglare 1
 // skyblend 1.0
 // skybox "skyboxes/stars"
 // skycolour 0xFFFFFF
 // skyglare 1
-// skylight 0x331111
+// skylight 0x381808
 // skytexture 1
 // slopez 0.5
-// spincloudlayer 0.2
+// spincloudlayer 0.1
 // spinclouds 0.0
 // spinsky 0.1
 // stairheight 4.1
