renamed mission to "story" mode and setup basic gameplay parameters along with preliminary friendly ai
Former-commit-id: ff3481f0b5d5674635a4a224239e905df77f01a8

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -10,7 +10,7 @@ exec "sounds.cfg"
 //		0		Demo
 //		1		Lobby
 //		2		Edit
-//		3		Singleplayer
+//		3		Story
 //		4		Deathmatch
 //		5		Secure-the-Flag
 //		6		Capture-the-Flag
@@ -30,7 +30,7 @@ demo				= [ stopdemo; start $arg1 0 0x00 ]; complete demo . dmo
 
 lobby				= [ start $arg1 1 0x0000 ]; mapcomplete lobby
 edit				= [ start $arg1 2 0x0000 ]; mapcomplete edit
-mission				= [ start $arg1 3 0x0000 ]; mapcomplete mission
+story				= [ start $arg1 3 0x0000 ]; mapcomplete story
 deathmatch			= [ start $arg1 4 0x0000 ]; mapcomplete deathmatch
 instagib			= [ start $arg1 4 0x0004 ]; mapcomplete instagib
 arena				= [ start $arg1 4 0x0020 ]; mapcomplete arena
