--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -136,7 +136,7 @@ newgui arena [
 	]
 ]
 
-maplists = [ missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
+maplists = [ storymaps storymaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
 maplistsize = 22 //adjust if desired
 mapindex = 0
 maplist = ""
@@ -194,7 +194,7 @@ newgui game [
 						guititle "gamemode"
 						guiradio "lobby"						modeselected 1
 						guiradio "editing"						modeselected 2
-						guiradio "mission"						modeselected 3
+						guiradio "story"						modeselected 3
 						guiradio "deathmatch"					modeselected 4
 						guiradio "secure-the-flag"				modeselected 5
 						guiradio "capture-the-flag"				modeselected 6
