ability for playerstarts and flags to be assigned to a specific game mode and current game triggerid
Former-commit-id: 09e078f569d0d966587160f1e856b30f40d6142f

--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -13,10 +13,14 @@
 // cloudblend 1.0
 // cloudbox "acord/sky4"
 // cloudclip 0.0001
-// cloudcolour 0xA98AC7
+// cloudcolour 0xFFFFFF
 // cloudfade 1.0
+// cloudglare 0
 // cloudheight 0.05
 // cloudlayer "acord/cloudlayer"
+// cloudlayerblend 1.0
+// cloudlayercolour 0xA98AC7
+// cloudlayerglare 0
 // cloudscale 1.0
 // cloudscrollx 0.01
 // cloudscrolly 0.02
@@ -34,9 +38,7 @@
 // grassheight 4
 // grassscale 2
 // gravity 50.0
-// impulsemod 60.0
-impulsespeed 50
-// impulsetime 0
+// impulsespeed 50.0
 // jumpspeed 50.0
 // ladderspeed 1.0
 // lavacolour 0xFF4400
@@ -55,12 +57,17 @@ impulsespeed 50
 // maptitle "BloodGrounds (Q3DM6) by Jonathan 'W!CK3D'"
 // mmshadows 1
 // mmskylight 1
-movespeed 50.0
+// movespeed 50.0
 // numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
+// skybgcolour 0x000000
+// skybgglare 1
+// skyblend 1.0
 // skybox "acord\sky3"
+// skycolour 0xFFFFFF
+// skyglare 1
 // skylight 0x000000
 // skytexture 1
 // slopez 0.5
