support for slower updating ai and internal suspension
Former-commit-id: 6b30f34883aa4d0d9dcf83b6149dc25c1807a374

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -198,18 +198,20 @@ newgui game [
 						guiradio "deathmatch"					modeselected 4
 						guiradio "secure-the-flag"				modeselected 5
 						guiradio "capture-the-flag"				modeselected 6
+						if (>= $modeselected 3) [
+							guibitfield "instagib"					mutsselected 0x0004
+						] [ guistrut 1 ]
 						if (>= $modeselected 4) [
 							guistrut 1
 							guititle "mutators"
 							guibitfield "multi-sided"				mutsselected 0x0001
 							guibitfield "teamplay"					mutsselected 0x0002
-							guibitfield "instagib"					mutsselected 0x0004
 							guibitfield "arena"						mutsselected 0x0020
 							if (= $modeselected 4) [
 								guibitfield "duel"						mutsselected 0x0008
 								guibitfield "last-man"					mutsselected 0x0010
 							] [ guistrut 2 ]
-						] [ guistrut 8 ]
+						] [ guistrut 7 ]
 						mutsselected = (mutscheck $modeselected $mutsselected)
 					]
 					guistrut 2
