things and stuff and probably some other stuff, but no zombies yet.
Former-commit-id: 87efb691866310bf38836558210e344425029eb3

--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1527,6 +1527,26 @@ texture n "acord/carpet3n.jpg" 0 0 0 0.25
 texture s "acord/carpet3s.jpg" 0 0 0 0.25
 texture z "acord/carpet3z.jpg" 0 0 0 0.25
 
+texture 0 "acord/window8c.jpg" 0 0 0 0.5
+texture n "acord/window8n.jpg" 0 0 0 0.5
+texture s "acord/window8s.jpg" 0 0 0 0.5
+texture z "acord/window8z.jpg" 0 0 0 0.5
+
+texture 0 "acord/window9c.jpg" 0 0 0 0.5
+texture n "acord/window9n.jpg" 0 0 0 0.5
+texture s "acord/window9s.jpg" 0 0 0 0.5
+texture z "acord/window9z.jpg" 0 0 0 0.5
+
+texture 0 "acord/window11c.jpg" 0 0 0 0.5
+texture n "acord/window11n.jpg" 0 0 0 0.5
+texture s "acord/window11s.jpg" 0 0 0 0.5
+texture z "acord/window11z.jpg" 0 0 0 0.5
+
+texture 0 "acord/window12c.jpg" 0 0 0 0.5
+texture n "acord/window12n.jpg" 0 0 0 0.5
+texture s "acord/window12s.jpg" 0 0 0 0.5
+texture z "acord/window12z.jpg" 0 0 0 0.5
+
 
 
 setshader stdworld
